# rvq-index

./: .gitignore  Cargo.toml  README.md
benches/: index_bench.rs
benchmarks/: generate_data.py  pyproject.toml
src/: codebook.rs  errors.rs  index.rs  lib.rs  store.rs  trie.rs
