[package]
name = "rvq-index"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.11.0"
thiserror = "2.0.18"
npyz = { version = "0.8", optional = true }
safetensors = { version = "0.4", optional = true }
bytemuck = { version = "1", optional = true }

[features]
npy = ["dep:npyz"]
safetensors = ["dep:safetensors", "dep:bytemuck"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "index_bench"
harness = false
required-features = ["npy", "safetensors"]
